# phpfd

./: .gitignore  Cargo.toml  phpfd.stubs.php
.devcontainer/: Dockerfile  devcontainer.json
phpfd-test/: composer.json
phpfd-test/tests/Benchmarks/: GetFDBenchmark.php
src/: fd.rs  ffi.rs  lib.rs
