[package]
name = "phpfd"
version = "0.1.0"
authors = ["Dusan Malusev <dmalusev@nanointeractive.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = { git = "https://github.com/davidcole1340/ext-php-rs", branch = "master" }
php-all-sys = "0.0.1"

[lib]
crate-type = ["cdylib"]
